# dbc2shark

./: .gitignore  Cargo.toml  README.md
sample/: sample.dbc  sample.pcapng
src/: main.rs
