[package]
name = "dbc2shark"
version = "0.1.2"
edition = "2024"
description = "A CLI tool that converts a CAN DBC file (Vector DBC format) into a Wireshark Lua dissector"
license = "MIT"
repository = "https://github.com/haradama/dbc2shark"
readme = "README.md"
keywords = ["cli", "tool", "automotive"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.100"
can-dbc = "8.0.0"
clap = { version ="4.5.53", features = ["derive"] }
heck = "0.5.0"
